➕ installed expo for netlify build

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@stencil/core": "^2.13.0",
     "emotion": "^11.0.0",
+    "expo": "^47.0.8",
     "style-dictionary": "^3.7.1"
   },
   "devDependencies": {
@@ -47,7 +48,7 @@
     "generate": "stencil generate",
     "transform-tokens": "node ./src/design-tokens/config/transform-tokens.js",
     "build-storybook": "storybook build",
-    "build-static-webapp":"expo build:web"
+    "build-static-webapp": "expo build:web"
   },
   "repository": {
     "type": "git",
