--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@stencil/core": "^2.13.0",
     "emotion": "^11.0.0",
-    "expo": "^47.0.8",
     "figma-tokens-convert": "^1.0.0",
     "style-dictionary": "^3.7.1",
     "styled-components": "^5.3.6",
@@ -26,6 +25,7 @@
     "@storybook/addon-interactions": "^7.0.0-alpha.58",
     "@storybook/addon-links": "^7.0.0-alpha.58",
     "@storybook/addons": "^7.0.0-alpha.58",
+    "@storybook/cli": "^7.0.0-alpha.58",
     "@storybook/html": "^7.0.0-alpha.58",
     "@storybook/html-webpack5": "^7.0.0-alpha.58",
     "@storybook/testing-library": "^0.0.14-next.0",
@@ -51,8 +51,7 @@
     "generate": "stencil generate",
     "transform-tokens": "node ./src/design-tokens/config/transform-tokens.js",
     "convert": "node ./node_modules/figma-tokens-convert/convert.js ./src/design-tokens/json/design-tokens.tokens.json ./src/design-tokens/css/_variables.css belo",
-    "build-storybook": "storybook build",
-    "build-static-webapp": "expo build:web"
+    "build:storybook": "storybook build public"
   },
   "repository": {
     "type": "git",
