--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/design-system/design-system.esm.js",
+  "storybook-deployer": {
+    "gitUsername": "GH Pages Storybook Bot",
+    "gitEmail": "lol@coolemail.com",
+    "commitMessage": "Deploy Storybook [skip ci]"
+  },
   "dependencies": {
     "@stencil/core": "^2.13.0",
     "emotion": "^11.0.0",
@@ -28,6 +33,7 @@
     "@storybook/cli": "^7.0.0-alpha.58",
     "@storybook/html": "^7.0.0-alpha.58",
     "@storybook/html-webpack5": "^7.0.0-alpha.58",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.0.14-next.0",
     "@storybook/theming": "^7.0.0-alpha.58",
     "@types/jest": "^27.0.3",
@@ -51,7 +57,8 @@
     "generate": "stencil generate",
     "transform-tokens": "node ./src/design-tokens/config/transform-tokens.js",
     "convert": "node ./node_modules/figma-tokens-convert/convert.js ./src/design-tokens/json/design-tokens.tokens.json ./src/design-tokens/css/_variables.css belo",
-    "build:storybook": "storybook build"
+    "build-storybook": "storybook build -o storybook-static",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "repository": {
     "type": "git",
