:zap: WoW! Deployments!

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/theming": "^7.0.0-alpha.58",
     "@types/jest": "^27.0.3",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.13.1",
     "concurrently": "^7.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.5",
@@ -60,7 +61,7 @@
     "transform-tokens": "node ./src/design-tokens/config/transform-tokens.js",
     "convert": "node ./node_modules/figma-tokens-convert/convert.js ./src/design-tokens/json/design-tokens.tokens.json ./src/design-tokens/css/_variables.css belo",
     "build-storybook": "storybook build -o storybook-static",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy": "npx chromatic --project-token=238821f43c70"
   },
   "repository": {
     "type": "git",
